Skip to content

Core deletes callbacks from inexistent variables

[00007fdb03528fa8] core input error: cannot delete callback 0x1035f60e0 from nonexistent variable 'next-title'
[00007fdb03528fa8] core input error: cannot delete callback 0x1035f60e0 from nonexistent variable 'prev-title'
[00007fdb03528fa8] core input error: cannot delete callback 0x1035f60e0 from nonexistent variable 'menu-popup'
[00007fdb03528fa8] core input error: cannot delete callback 0x1035f60e0 from nonexistent variable 'menu-title'
[00007fdb03528fa8] core input error: cannot delete callback 0x1035f6430 from nonexistent variable 'next-chapter'
[00007fdb03528fa8] core input error: cannot delete callback 0x1035f6430 from nonexistent variable 'prev-chapter'
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information