input/var: fix deletion of title navigation callbacks

Just as it does not make sense to add callbacks for {next,prev}-title
and menu-{popup,title} if we do not have more than one title, it does
not make sense to delete such callbacks under the same condition
(especially since we would delete in cases we do not create).

Close #17021

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>